# cppDL

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CmakeLists.txt  README.md  build.bat  build.sh  clean.bat  clean.sh  makefile  run.bat  run.sh
core/: cppdl_defines.h  defines.h
core/engine/engine_core/: engine.hpp
core/engine/memory_allocator_core/: alloc_list.hpp  allocator_base.hpp  arena_alloc.hpp  linear_alloc.hpp  memory_core.hpp  stack_alloc.hpp
core/engine/memory_allocator_core/data_structures/: doubly_linked_list.hpp  linked_list.hpp  stacked_list.hpp
core/engine/platform_core/: platform_base.hpp
core/engine/thread_core/: thread_mutex.hpp
core/impl/attention_core_impl/: attention.cpp
core/impl/neural_core_impl/: neural_network.cpp
core/impl/neural_memory_impl/: nn_memory.cpp
core/impl/tensor_core_impl/: tensor.cpp
core/impl/tokenizer_core_impl/: tokenizer.cpp
core/include/: Structures.h
core/include/attention_core/: attention.hpp
core/include/conv_core/: convolution.h
core/include/functions_core/: functions.h
core/include/logger_core/: dual_output.hpp  logger.h  logger.hpp
core/include/neural_core/: neural_network.h  neural_network.hpp
core/include/neural_memory/: nn_memory.hpp
core/include/tensor_core/: tensor.h  tensor.hpp
core/include/tokenizer_core/: tokenizer.h  tokenizer.hpp
core/utils/: dashboard.hpp
dashboard/: ansi.hpp  dashboard.hpp  main.cpp  metrics.hpp  test.cpp
documentation/cppDL_documentation/: repos_to_read_and_learn.md
documentation/cppDL_documentation/.obsidian/: appearance.json  workspace.json
documentation/cppDL_documentation/.obsidian/snippets/: dark_mode.css
documentation/cppDL_documentation/core/engine/memory_core/: alloc_list_hpp.md
documentation/cppDL_documentation/core/engine/platform_core/: platform_base_documentation.md
documentation/cppDL_documentation/core/engine/thread_core/: thread_mutex_documentation.md
documentation/cppDL_documentation/core/include/tokenizer_core/: bpe_tokenizer_documentation.md
src/: main.cpp
src/TokenModels/: DataSet.txt  bpe_merges.txt  bpe_vocab.txt
src/include/: Functions.h  Grad.h  ImageProcess.h  NeuralNetwork.h  RandomGen.h  Structures.h  Tensor.h  Word2Vec.h
test_bed/src/: main.cpp
